# Food_Delivery_Robot

./: .gitignore  CLAUDE.md  README.md  Untitled.java  frames_2025-12-05_06.29.46.gv  frames_2026-01-24_05.09.50.gv  frames_2026-02-03_02.38.44.gv  frames_2026-05-17_15.37.35.gv
install/: setup.sh  (+4 more)
src/dwb_controller/: CMakeLists.txt  package.xml
src/dwb_controller/include/dwb_controller/: dwb_controller.hpp  obstacle_detector.hpp
src/dwb_controller/src/: dwb_controller.cpp  main.cpp  obstacle_detector.cpp
src/food_del_astar_planner/: CMakeLists.txt  package.xml
src/food_del_astar_planner/include/food_del_astar_planner/: astar_planner.hpp
src/food_del_astar_planner/src/: astar_planner.cpp
src/food_del_robot_bringup/: CMakeLists.txt  package.xml
src/food_del_robot_bringup/launch/: display.launch.py  final_result.py  final_result_with_obs.py  hand_controller.launch.py  test_10_data.txt  test_10_figure.npz  test_1_data.txt  test_1_figure.npz  test_2_data.txt  test_2_figure.npz  test_3_data.txt  test_3_figure.npz  test_4_data.txt  test_4_figure.npz  test_5_data.txt  test_5_figure.npz  test_6_data.txt  test_6_figure.npz  test_7_data.txt  test_7_figure.npz  test_8_data.txt  test_8_figure.npz  test_9_data.txt  test_9_figure.npz
src/food_del_robot_bringup/launch/real_robot/: amcl.launch.py  ekf.launch.py  manual_control.launch.py  robot.launch.py  robot_smac.launch.py  robot_v2.launch.py  ros2_nav2.launch.py  slam.launch.py
src/food_del_robot_bringup/launch/simulation/: amcl_sim.launch.py  gazebo_hmi.launch.py  gazebo_in_restaurent_also_rviz.launch.py  gazebo_map_only.launch.py  gazebo_rviz.launch.py  robot_sim.launch.py  robot_sim_dwb.launch.py  robot_sim_hmi.launch.py  robot_sim_homemade_astar.launch.py  robot_sim_planner_only.launch.py  robot_sim_smac.launch.py  robot_sim_vector_pursuit.launch.py  robot_sim_vp.launch.py  rtab_slam.launch.py  slam_sim.launch.py  slam_sim_hmi.launch.py
src/food_del_robot_bringup/maps/: test_map.pgm  test_map.yaml
src/food_del_robot_bringup/maps/Class_map/: classroom_map.pgm  classroom_map.xcf  classroom_map.yaml  classroom_map_mask.pgm  classroom_map_mask.xcf  classroom_map_mask.yaml  my_map.pgm
src/food_del_robot_bringup/maps/Outdoor_map/: Outdoor_new.pgm  Outdoor_new.xcf  Outdoor_new.yaml  Outdoor_new_mask.pgm  Outdoor_new_mask.xcf  Outdoor_new_mask.yaml  outdoor_map.yaml
src/food_del_robot_bringup/maps/Simulation_map/: Simulation_map.pgm  Simulation_map.xcf  Simulation_map.yaml  keepout_mask.pgm  keepout_mask.xcf  keepout_mask.yaml
src/food_del_robot_bringup/maps/Turtlebot3_map/: turtlebot3_map.yaml
src/food_del_robot_description/: CMakeLists.txt  package.xml
src/food_del_robot_description/config/: food_del_robot.yaml  joystick.yaml  lifecycle_manager.yaml
src/food_del_robot_description/launch/: amcl_localization.launch.py  display.launch.py  food_del_robot.launch.xml  food_del_robot_amcl.launch.py  gazebo.launch.py  joystick.launch.py  play_drive.launch.py  robot.launch.py  robot_gazebo.launch.xml  robot_no_nav.launch.py  robot_sim_with_amcl.launch.py  robot_v2.launch.py  robot_with_joystick.launch.py  robot_with_nav.launch.py  slam_online_mapping.launch.py
src/food_del_robot_description/maps/: food_del_sim_map.pgm  food_del_sim_map.yaml  imu.yaml
src/food_del_robot_description/meshes/: camera_link.STL  caster1_link.STL  caster2_link.STL  caster3_link.STL  lidar_link.STL  right_wheel_link.STL
src/food_del_robot_description/rviz/: food_del_robot.rviz  food_del_robot_for_mapping.rviz  food_del_robot_v7.rviz  food_del_sim.rviz  food_del_sim_v2.rviz  food_del_sim_v3.rviz  food_del_sim_v4.rviz  food_del_sim_v5.rviz  food_del_sim_v6.rviz  just_robot.rviz  robot.rviz  robot_amcl.rviz  robot_nav.rviz
src/food_del_robot_description/urdf/: camera.xacro  common_properties.xacro  food_del_robot.ros2_control.xacro  food_del_robot.urdf.xacro  food_del_robot.xacro  food_del_robot_gazebo.xacro  lidar.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_sim_robot.urdf.xacro
src/food_del_robot_description/urdf/Real_Robot/: base_link.STL  food_del_robot.xacro  left_wheel_link.STL  my_main.urdf.xacro  right_wheel_link.STL
src/food_del_robot_description/urdf/Simulation/: camera_sim.xacro  common_properties_sim.xacro  lidar_sim.xacro  mobile_base_gazebo_sim.xacro  mobile_base_sim.xacro  my_main_sim.urdf.xacro
src/food_del_robot_description/worlds/: test_world.world
src/food_del_robot_description/worlds/Restaurant/: Restaurant  Restaurant.sdf  model.config  model.sdf
src/food_del_robot_description/worlds/restaurant/: model.config
src/food_del_robot_full_description/: package.xml  setup.cfg  setup.py
src/food_del_robot_full_description/launch/: display.launch.py  gazebo.launch.py
src/food_del_robot_full_description/meshes/: base_link.STL  camera_link.STL  imu_link.STL  left_wheel_link.STL  lidar_link.STL
src/food_del_robot_full_description/urdf/: Robot_Full_Design.SLDASM.csv  Robot_Full_Design.SLDASM.urdf  robot_full_design.urdf.xacro
src/food_del_robot_hardware/: CMakeLists.txt  food_del_robot_hw_interface.xml  package.xml
src/food_del_robot_hardware/include/food_del_robot_hardware/: food_del_robot_hardware_interface.hpp  wheels_driver.hpp  zlac8015d_driver.hpp
src/food_del_robot_hardware/src/: can.cpp  food_del_robot_hardware_interface.cpp  wheels_driver.cpp  zlac8015d_driver.cpp
src/my_amcl/: CMakeLists.txt  package.xml
src/my_amcl/config/: my_amcl_params.yaml
src/my_amcl/include/my_amcl/: my_amcl.hpp
src/my_amcl/launch/: my_amcl.launch.py
src/my_amcl/src/: my_amcl_node.cpp
src/my_controller/: CMakeLists.txt  package.xml
src/my_controller/src/: my_controller.cpp
src/yahboom_imu_10_axis/: CMakeLists.txt  package.xml
src/yahboom_imu_10_axis/include/: imu_serial.hpp  protocol.hpp
src/yahboom_imu_10_axis/src/: imu_driver.cpp  imu_serial.cpp
src/zlac8015d_driver/: CMakeLists.txt  package.xml
src/zlac8015d_driver/include/zlac8015d_driver/: can.hpp  (+1 more)
src/zlac8015d_driver/src/: can.cpp  cmd_vel_to_twist_stamped.cpp  drive_and_odom.cpp  drive_and_odom_v2.cpp  ekf_node.cpp  zlac8015d_driver.cpp
(+203 files in other folders)
